# rag-lm-local

./: Cargo.toml  README.md
src/: main.rs
src/adapter/: mod.rs
src/adapter/ai/: lm_studio.rs  mod.rs
src/adapter/repository/: qdrant.rs
src/models/: ai.rs
src/port/: ai_port.rs  mod.rs  repository_port.rs
src/service/: ai_service.rs  mod.rs  qdrant_service.rs
