[package]
name = "AIConsole"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.11", features = ["json"] }
async-trait = "0.1.83"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qdrant-client = "1.9.0"
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }